# dtcl

./: .travis.yml  Makefile.am  README.md  configure.ac
src/: Makefile.am  coru.h  dtcast.c  dtcast.yuck  dtchanges.R  dtchanges.c  dtchanges.yuck  dtmelt.c  dtmelt.yuck  dtmerge.c  dtmerge.yuck  dtrbind.c  dtrbind.yuck  lines.c  lines.yuck  nifty.h
src/coru/: cocore.c
test/: Makefile.am  cast_01.csv  cast_02.csv  changes_01.csv  changes_02.csv  changes_03.csv  dtcast_01.clit  dtcast_02.clit  dtcast_03.clit  dtcast_04.clit  dtcast_05.clit  dtcast_06.clit  dtcast_07.clit  dtcast_08.clit  dtcast_09.clit  dtcast_10.clit  dtcast_11.clit  dtcast_12.clit  dtcast_13.clit  dtcast_14.clit  dtcast_15.clit  dtcast_16.clit  dtcast_17.clit  dtcast_18.clit  dtcast_19.clit  dtcast_20.clit  dtcast_21.clit  dtcast_22.clit  dtcast_23.clit  dtcast_24.clit  dtcast_25.clit  dtcast_26.clit  dtcast_27.clit  dtcast_28.clit  dtcast_29.clit  dtchanges_01.clit  dtchanges_02.clit  dtchanges_03.clit  dtchanges_04.clit  dtchanges_05.clit  (+49 more)
